feat: added structure html for dev-tools

--- a/src/content/dev-tools.html
+++ b/src/content/dev-tools.html
@@ -160,15 +160,235 @@
                         <li class="article__item"><a class="article__link" href="#doc">Dokumentacja</a></li>
                         <li class="article__item"><a class="article__link" href="#tools">Narzędzia</a></li>
                         <li class="article__item"><a class="article__link" href="#watch">Do obejrzenia</a></li>
-                        <li class="article__item"><a class="article__link" href="#list">Lista frontendowca</a></li>
+                        <li class="article__item"><a class="article__link" href="#checkList">Lista frontendowca</a></li>
                     </ul>
                 </nav>
             </header>
             <h2 class="article__header">Dev tools</h2>
             <div class="wrapper">
-                <section class="section" id="multimedia">
-                    <h3 class="section__header">Multimedia</h3>
-
+                <section class="section-read" id="read">
+                    <h3 class="section-read__header">Do poczytania</h3>
+                    <ul class="section-read__list">
+                        <li class="section-read__item"><a href="https://www.nafrontendzie.pl/" target="_blank"
+                                rel="noopener noreferrer" class="section-read__link"> <span>NA
+                                    FRONTENDZIE</span><span>"Cześć! Jestem Bartek i witam Cię na moim blogu! Piszę tutaj
+                                    głównie o JavaScript
+                                    i React ale pojawiają się też wpisy na temat innych obszarów frontendu."</span></a>
+                        </li>
+                        <li class="section-read__item"><a href="https://www.conventionalcommits.org/pl/v1.0.0-beta.2/"
+                                target="_blank" rel="noopener noreferrer"
+                                class="section-read__link"><span>Konwencjonalne
+                                    Commity</span><span>Specyfikacja dodawania znaczenia
+                                    czytelnego dla człowieka do commit komunikatów.</span></a></li>
+                        <li class="section-read__item"><a
+                                href="https://przeprogramowani.pl/wydanie/skuteczna-nauka-programowania" target="_blank"
+                                rel="noopener noreferrer" class="section-read__link">
+                                <span>Przeprogramowani</span><span>Skuteczna nauka programowania.</span></a>
+                        </li>
+                        <li class="section-read__item"><a href="https://roadmap.sh/frontend" target="_blank"
+                                rel="noopener noreferrer" class="section-read__link"> <span>roadmap.sh</span><span>Mapa
+                                    rozwoju frontendowca.</span></a></li>
+                        <li class="section-read__item"><a href="https://bedekodzic.pl/" target="_blank"
+                                rel="noopener noreferrer"
+                                class="section-read__link"><span>Bedekodzic.pl</span><span>Blog o
+                                    programowaniu i świecie IT. O tym jak podejść do nauki i jak sobie radzić z tym
+                                    wszystkim. Mam nadzieję, że dzięki niemu zostaniesz lepszym Web Developerem i
+                                    Programistą 🙂</span></a></li>
+                        <li class="section-read__item"><a href="https://www.webkrytyk.pl/" target="_blank"
+                                rel="noopener noreferrer" class="section-read__link"><span>WebKrytyk</span><span>Kilka
+                                    słów krytyki o polskich stronach WWW.</span></a></li>
+                    </ul>
+                </section>
+                <section class="section-doc" id="doc">
+                    <h3 class="section-doc__header">Dokumentacja, materiały do nauki.</h3>
+                    <ul class="section-doc__list">
+                        <li class="section-doc__item"><a href="https://developer.mozilla.org/pl/" target="_blank"
+                                rel="noopener noreferrer" class="section-doc__link"><span>MDN web
+                                    docs</span><span>Zasoby dla programistów, przez programistów.</span></a></li>
+                        <li class="section-doc__item"><a href="https://devdocs.io" target="_blank"
+                                rel="noopener noreferrer" class="section-doc__link"><span>DevDocs</span><span>Wiele
+                                    dokumentacji w jednym miejscu. Dzięki przyjaznemu interfejsowi w szybki sposób
+                                    poszukasz tego, co potrzebujesz.</span></a></li>
+                        <li class="section-doc__item"><a href="https://css-tricks.com/" target="_blank"
+                                rel="noopener noreferrer" class="section-doc__link"><span>css-tricks</span><span>
+                                    Przykłady, rozwiązania, aktualności frontendowe</span></a></li>
+                        <li class="section-doc__item"><a href="https://stackoverflow.com/" target="_blank"
+                                rel="noopener noreferrer"
+                                class="section-doc__link"><span>stackoverflow</span><span>Ogromna społeczność
+                                    programistyczna, niebo dla programisty.</span></a></li>
+                        <li class="section-doc__item"><a href="https://github.com/
+                            " target="_blank" rel="noopener noreferrer"
+                                class="section-doc__link"><span>GitHub</span><span>Ogromna baza repozytoriów Git, wiele
+                                    ciekawych projektów.</span></a></li>
+                        <li class="section-doc__item"><a href="https://codelabs.developers.google.com/dev-pwa-training/"
+                                target="_blank" rel="noopener noreferrer"
+                                class="section-doc__link"><span>Codelabs</span><span>Prawie wszystko o PWA i nie
+                                    tylko.</span></a>
+                        </li>
+                        <li class="section-doc__item"><a href="https://kursjs.pl/" target="_blank"
+                                rel="noopener noreferrer" class="section-doc__link"><span>kursjs</span><span>JavaScripts
+                                    dla superbohaterów.</span></a></li>
+                        <li class="section-doc__item"><a href="https://javascript.info/object" target="_blank"
+                                rel="noopener noreferrer"
+                                class="section-doc__link"><span>Javascript.info</span><span>samouczek
+                                    JavaScripts</span></a></li>
+                        <li class="section-doc__item"><a href="https://bonsaiden.github.io/JavaScript-Garden/pl/
+                            " target="_blank" rel="noopener noreferrer" class="section-doc__link"><span>JavaScript
+                                    Garden</span><span> Przewodnik jest dziełem dwóch uroczych użytkowników Stack
+                                    Overflow, Ivo Wetzel (Treść) oraz Zhang Yi Jiang (Projekt)</span></a></li>
+                        <li class="section-doc__item"><a href="https://tutorials.comandeer.pl/" target="_blank"
+                                rel="noopener noreferrer" class="section-doc__link"><span>Tutoriale
+                                    Comandeera</span><span>Tutoriale Comandeera</span></a></li>
+                        <li class="section-doc__item"><a href="https://pl.reactjs.org/docs/getting-started.html"
+                                target="_blank" rel="noopener noreferrer"
+                                class="section-doc__link"><span>React</span><span>Dokumentacja react.</span></a></li>
+                    </ul>
+                </section>
+                <section class="section-tools" id="tools">
+                    <h3 class="section-tools__header">Dokumentacja, materiały do nauki.</h3>
+                    <ul class="section-tools__list">
+                        <li class="section-tools__item"><a href="http://frontendtools.com/" target="_blank"
+                                rel="noopener noreferrer"
+                                class="section-tools__link"><span>frontendtools</span><span>Narzędzia dla programistów i
+                                    projektantów frontendu.</span></a></li>
+                        <li class="section-tools__item"><a href="https://caniuse.com/" target="_blank"
+                                rel="noopener noreferrer" class="section-tools__link"><span>Can I use</span><span>Co
+                                    obecnie działa w przeglądarce.</span></a></li>
+                        <li class="section-tools__item"><a href="https://gitexplorer.com/" target="_blank"
+                                rel="noopener noreferrer" class="section-tools__link"><span>Git Command
+                                    Explorer</span><span>Polecenia Gita.</span></a></li>
+                        <li class="section-tools__item"><a href="https://uncss-online.com/" target="_blank"
+                                rel="noopener noreferrer" class="section-tools__link"><span>UnCSS
+                                    Online!</span><span>Pozbądź się nieużywanego CSSa</span></a></li>
+                    </ul>
+                </section>
+                <section class="section-tools" id="watch">
+                    <h3 class="section-tools__header">Do obejrzenia.</h3>
+                    <ul class="section-tools__list">
+                        <li class="section-tools__item"><a
+                                href="https://www.youtube.com/channel/UCq8XmOMtrUCb8FcFHQEd8_g/featured" target="_blank"
+                                rel="noopener noreferrer" class="section-tools__link"><span>hello
+                                    roman</span><span>Filmy poświęcone branży IT, a przede wszystkim przemyślenia na
+                                    temat front-endu.</span></a></li>
+                        <li class="section-tools__item"><a
+                                href="https://www.youtube.com/channel/UC_MIaHmSkt9JHNZfQ_gUmrg" target="_blank"
+                                rel="noopener noreferrer"
+                                class="section-tools__link"><span>overment</span><span>Najbardziej konkretne filmy dla
+                                    webdeveloperów.</span></a></li>
+                        <li class="section-tools__item"><a
+                                href="https://www.youtube.com/channel/UCLLdzVN9P9lV8kmJhHsiuHA" target="_blank"
+                                rel="noopener noreferrer"
+                                class="section-tools__link"><span>Kodu.je</span><span>Przydatne tutoriale, niestety brak
+                                    nowych.</span></a></li>
+                        <li class="section-tools__item"><a href="https://dev.tube/" target="_blank"
+                                rel="noopener noreferrer" class="section-tools__link"><span>dev.tube</span><span>Youtube
+                                    dla programistów.</span></a></li>
+                    </ul>
+                </section>
+                <section class="section-checkList" id="checkList">
+                    <h3 class="section-check-List__header">Lista kontrolna dla twojego kodu/serwera</h3>
+                    <section class="html-css">
+                        <h4 class="html-css__header">HTML i CSS</h4>
+                        <ul class="html-css__list">
+                            <li class="html-css__item"><a href="https://github.com/joshbuchea/HEAD" target="_blank"
+                                    rel="noopener noreferrer"
+                                    class="html-css__link">https://github.com/joshbuchea/HEAD</a></li>
+                            <li class="html-css__item"><a href="https://validator.w3.org/" target="_blank"
+                                    rel="noopener noreferrer" class="html-css__link">https://validator.w3.org/</a></li>
+                            <li class="html-css__item"><a href="https://www.10bestdesign.com/dirtymarkup/"
+                                    target="_blank" rel="noopener noreferrer"
+                                    class="html-css__link">https://www.10bestdesign.com/dirtymarkup/</a></li>
+                            <li class="html-css__item"><a href="https://validator.w3.org/checklink" target="_blank"
+                                    rel="noopener noreferrer"
+                                    class="html-css__link">https://validator.w3.org/checklink</a></li>
+                            <li class="html-css__item"><a href="https://uncss-online.com/" target="_blank"
+                                    rel="noopener noreferrer" class="html-css__link">https://uncss-online.com/</a></li>
+                            <li class="html-css__item"><a href="https://github.com/purifycss/purifycss" target="_blank"
+                                    rel="noopener noreferrer"
+                                    class="html-css__link">https://github.com/purifycss/purifycss</a></li>
+                        </ul>
+                    </section>
+                    <section class="accessibility">
+                        <h4 class="accessibility__header">Dostępność</h4>
+                        <ul class="accessibility__list">
+                            <li class="accessibility__item"><a href="https://achecker.ca/checker/index.php"
+                                    target="_blank" rel="noopener noreferrer"
+                                    class="accessibility">https://achecker.ca/checker/index.php</a></li>
+                            <li class="accessibility__item"><a href="http://contrast-ratio.com/" target="_blank"
+                                    rel="noopener noreferrer" class="accessibility">http://contrast-ratio.com/</a></li>
+                            <li class="accessibility__item"><a href="http://wave.webaim.org/" target="_blank"
+                                    rel="noopener noreferrer" class="accessibility">http://wave.webaim.org/</a></li>
+                            <li class="accessibility__item"><a
+                                    href="https://websiteseochecker.com/html-sitemap-generator/" target="_blank"
+                                    rel="noopener noreferrer"
+                                    class="accessibility">https://websiteseochecker.com/html-sitemap-generator/</a></li>
+                        </ul>
+                    </section>
+                    <section class="security">
+                        <h4 class="security__header">Bezpieczeństwo</h4>
+                        <ul class="security__list">
+                            <li class="security__item"><a href="https://securityheaders.com" target="_blank"
+                                    rel="noopener noreferrer" class="seciurity__link">https://securityheaders.com</a>
+                            </li>
+                            <li class="security__item"><a href="https://webbkoll.dataskydd.net/en" target="_blank"
+                                    rel="noopener noreferrer"
+                                    class="seciurity__link">https://webbkoll.dataskydd.net/en</a></li>
+                            <li class="security__item"><a href="https://observatory.mozilla.org/" target="_blank"
+                                    rel="noopener noreferrer"
+                                    class="seciurity__link">https://observatory.mozilla.org/</a></li>
+                            <li class="security__item"><a href="https://letsencrypt.org/" target="_blank"
+                                    rel="noopener noreferrer" class="seciurity__link">https://letsencrypt.org/</a></li>
+                            <li class="security__item"><a href="https://www.ssllabs.com/ssltest/index.html"
+                                    target="_blank" rel="noopener noreferrer"
+                                    class="seciurity__link">https://www.ssllabs.com/ssltest/index.html</a></li>
+                        </ul>
+                    </section>
+                    <section class="image">
+                        <h4 class="image__header">Optymalizacja obrazów</h4>
+                        <ul class="image__list">
+                            <li class="image__item"><a href="https://github.com/imagemin/imagemin" target="_blank"
+                                    rel="noopener noreferrer"
+                                    class="image__link">https://github.com/imagemin/imagemin</a></li>
+                            <li class="image__item"><a href="https://tinyjpg.com/" target="_blank"
+                                    rel="noopener noreferrer" class="image__link">https://tinyjpg.com/</a></li>
+                            <li class="image__item"><a href="https://simplesharingbuttons.com/#intro" target="_blank"
+                                    rel="noopener noreferrer"
+                                    class="image__link">https://simplesharingbuttons.com/#intro</a></li>
+                        </ul>
+                    </section>
+                    <section class="performance">
+                        <h4 class="performance__header">Wydajność</h4>
+                        <ul class="performance__list">
+                            <li class="performance__item"><a href="https://tools.pingdom.com/" target="_blank"
+                                    rel="noopener noreferrer" class="performance__link">https://tools.pingdom.com/</a>
+                            </li>
+                            <li class="performance__item"><a
+                                    href="https://developers.google.com/speed/pagespeed/insights/" target="_blank"
+                                    rel="noopener noreferrer"
+                                    class="performance__link">https://developers.google.com/speed/pagespeed/insights/</a>
+                            </li>
+                            <li class="performance__item"><a href="https://testmysite.withgoogle.com/intl/en-gb"
+                                    target="_blank" rel="noopener noreferrer"
+                                    class="performance__link">https://testmysite.withgoogle.com/intl/en-gb</a></li>
+                            <li class="performance__item"><a href="https://www.webpagetest.org/" target="_blank"
+                                    rel="noopener noreferrer" class="performance__link">https://www.webpagetest.org/</a>
+                            </li>
+                        </ul>
+                    </section>
+                    <section class="other">
+                        <h4 class="other__header">Inne</h4>
+                        <ul class="other__list">
+                            <li class="other__item"><a href="https://frontendchecklist.io/" target="_blank"
+                                    rel="noopener noreferrer" class="other__link">https://frontendchecklist.io/</a></li>
+                            <li class="other__item"><a href="https://github.com/thedaviddias/Front-End-Checklist"
+                                    target="_blank" rel="noopener noreferrer"
+                                    class="other__link">https://github.com/thedaviddias/Front-End-Checklist</a></li>
+                            <li class="other__item"><a href="https://codeburst.io/the-front-end-checklist-8b2292fdda44"
+                                    target="_blank" rel="noopener noreferrer"
+                                    class="other__link">https://codeburst.io/the-front-end-checklist-8b2292fdda44</a>
+                            </li>
+                        </ul>
+                    </section>
                 </section>
             </div>
         </article>
