feat: style for sections read, doc, tools and watch

--- a/src/content/dev-tools.html
+++ b/src/content/dev-tools.html
@@ -170,118 +170,138 @@
                     <h3 class="section-read__header">Do poczytania</h3>
                     <ul class="section-read__list">
                         <li class="section-read__item"><a href="https://www.nafrontendzie.pl/" target="_blank"
-                                rel="noopener noreferrer" class="section-read__link"> <span>NA
+                                rel="noopener noreferrer" class="section-read__link"> <span
+                                    class="section-read__title">NA
                                     FRONTENDZIE</span><span>"Cześć! Jestem Bartek i witam Cię na moim blogu! Piszę tutaj
                                     głównie o JavaScript
                                     i React ale pojawiają się też wpisy na temat innych obszarów frontendu."</span></a>
                         </li>
                         <li class="section-read__item"><a href="https://www.conventionalcommits.org/pl/v1.0.0-beta.2/"
-                                target="_blank" rel="noopener noreferrer"
-                                class="section-read__link"><span>Konwencjonalne
+                                target="_blank" rel="noopener noreferrer" class="section-read__link"><span
+                                    class="section-read__title">Konwencjonalne
                                     Commity</span><span>Specyfikacja dodawania znaczenia
                                     czytelnego dla człowieka do commit komunikatów.</span></a></li>
                         <li class="section-read__item"><a
                                 href="https://przeprogramowani.pl/wydanie/skuteczna-nauka-programowania" target="_blank"
                                 rel="noopener noreferrer" class="section-read__link">
-                                <span>Przeprogramowani</span><span>Skuteczna nauka programowania.</span></a>
+                                <span class="section-read__title">Przeprogramowani</span><span>Skuteczna nauka
+                                    programowania.</span></a>
                         </li>
                         <li class="section-read__item"><a href="https://roadmap.sh/frontend" target="_blank"
-                                rel="noopener noreferrer" class="section-read__link"> <span>roadmap.sh</span><span>Mapa
+                                rel="noopener noreferrer" class="section-read__link"> <span
+                                    class="section-read__title">roadmap.sh</span><span>Mapa
                                     rozwoju frontendowca.</span></a></li>
                         <li class="section-read__item"><a href="https://bedekodzic.pl/" target="_blank"
-                                rel="noopener noreferrer"
-                                class="section-read__link"><span>Bedekodzic.pl</span><span>Blog o
+                                rel="noopener noreferrer" class="section-read__link"><span
+                                    class="section-read__title">Bedekodzic.pl</span><span>Blog o
                                     programowaniu i świecie IT. O tym jak podejść do nauki i jak sobie radzić z tym
                                     wszystkim. Mam nadzieję, że dzięki niemu zostaniesz lepszym Web Developerem i
                                     Programistą 🙂</span></a></li>
                         <li class="section-read__item"><a href="https://www.webkrytyk.pl/" target="_blank"
-                                rel="noopener noreferrer" class="section-read__link"><span>WebKrytyk</span><span>Kilka
+                                rel="noopener noreferrer" class="section-read__link"><span
+                                    class="section-read__title">WebKrytyk</span><span>Kilka
                                     słów krytyki o polskich stronach WWW.</span></a></li>
                     </ul>
                 </section>
                 <section class="section-doc" id="doc">
-                    <h3 class="section-doc__header">Dokumentacja, materiały do nauki.</h3>
+                    <h3 class="section-doc__header">Dokumentacja, materiały do nauki</h3>
                     <ul class="section-doc__list">
                         <li class="section-doc__item"><a href="https://developer.mozilla.org/pl/" target="_blank"
-                                rel="noopener noreferrer" class="section-doc__link"><span>MDN web
+                                rel="noopener noreferrer" class="section-doc__link"><span class="section-doc__title">MDN
+                                    web
                                     docs</span><span>Zasoby dla programistów, przez programistów.</span></a></li>
                         <li class="section-doc__item"><a href="https://devdocs.io" target="_blank"
-                                rel="noopener noreferrer" class="section-doc__link"><span>DevDocs</span><span>Wiele
+                                rel="noopener noreferrer" class="section-doc__link"><span
+                                    class="section-doc__title">DevDocs</span><span>Wiele
                                     dokumentacji w jednym miejscu. Dzięki przyjaznemu interfejsowi w szybki sposób
                                     poszukasz tego, co potrzebujesz.</span></a></li>
                         <li class="section-doc__item"><a href="https://css-tricks.com/" target="_blank"
-                                rel="noopener noreferrer" class="section-doc__link"><span>css-tricks</span><span>
+                                rel="noopener noreferrer" class="section-doc__link"><span
+                                    class="section-doc__title">css-tricks</span><span>
                                     Przykłady, rozwiązania, aktualności frontendowe</span></a></li>
                         <li class="section-doc__item"><a href="https://stackoverflow.com/" target="_blank"
-                                rel="noopener noreferrer"
-                                class="section-doc__link"><span>stackoverflow</span><span>Ogromna społeczność
+                                rel="noopener noreferrer" class="section-doc__link"><span
+                                    class="section-doc__title">stackoverflow</span><span>Ogromna społeczność
                                     programistyczna, niebo dla programisty.</span></a></li>
                         <li class="section-doc__item"><a href="https://github.com/
-                            " target="_blank" rel="noopener noreferrer"
-                                class="section-doc__link"><span>GitHub</span><span>Ogromna baza repozytoriów Git, wiele
+                            " target="_blank" rel="noopener noreferrer" class="section-doc__link"><span
+                                    class="section-doc__title">GitHub</span><span>Ogromna baza repozytoriów Git, wiele
                                     ciekawych projektów.</span></a></li>
                         <li class="section-doc__item"><a href="https://codelabs.developers.google.com/dev-pwa-training/"
-                                target="_blank" rel="noopener noreferrer"
-                                class="section-doc__link"><span>Codelabs</span><span>Prawie wszystko o PWA i nie
+                                target="_blank" rel="noopener noreferrer" class="section-doc__link"><span
+                                    class="section-doc__title">Codelabs</span><span>Prawie wszystko o PWA i nie
                                     tylko.</span></a>
                         </li>
                         <li class="section-doc__item"><a href="https://kursjs.pl/" target="_blank"
-                                rel="noopener noreferrer" class="section-doc__link"><span>kursjs</span><span>JavaScripts
+                                rel="noopener noreferrer" class="section-doc__link"><span
+                                    class="section-doc__title">kursjs</span><span>JavaScripts
                                     dla superbohaterów.</span></a></li>
                         <li class="section-doc__item"><a href="https://javascript.info/object" target="_blank"
-                                rel="noopener noreferrer"
-                                class="section-doc__link"><span>Javascript.info</span><span>samouczek
+                                rel="noopener noreferrer" class="section-doc__link"><span
+                                    class="section-doc__title">Javascript.info</span><span>samouczek
                                     JavaScripts</span></a></li>
                         <li class="section-doc__item"><a href="https://bonsaiden.github.io/JavaScript-Garden/pl/
-                            " target="_blank" rel="noopener noreferrer" class="section-doc__link"><span>JavaScript
+                            " target="_blank" rel="noopener noreferrer" class="section-doc__link"><span
+                                    class="section-doc__title">JavaScript
                                     Garden</span><span> Przewodnik jest dziełem dwóch uroczych użytkowników Stack
                                     Overflow, Ivo Wetzel (Treść) oraz Zhang Yi Jiang (Projekt)</span></a></li>
                         <li class="section-doc__item"><a href="https://tutorials.comandeer.pl/" target="_blank"
-                                rel="noopener noreferrer" class="section-doc__link"><span>Tutoriale
+                                rel="noopener noreferrer" class="section-doc__link"><span
+                                    class="section-doc__title">Tutoriale
                                     Comandeera</span><span>Tutoriale Comandeera</span></a></li>
                         <li class="section-doc__item"><a href="https://pl.reactjs.org/docs/getting-started.html"
-                                target="_blank" rel="noopener noreferrer"
-                                class="section-doc__link"><span>React</span><span>Dokumentacja react.</span></a></li>
+                                target="_blank" rel="noopener noreferrer" class="section-doc__link"><span
+                                    class="section-doc__title">React</span><span>Dokumentacja react.</span></a></li>
+                        <li class="section-doc__item"><a
+                                href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/A_re-introduction_to_JavaScript"
+                                target="_blank" rel="noopener noreferrer" class="section-doc__link"><span
+                                    class="section-doc__title">MDN
+                                    JavaScript</span><span>Wprowadzenie do JS</span></a></li>
                     </ul>
                 </section>
                 <section class="section-tools" id="tools">
-                    <h3 class="section-tools__header">Dokumentacja, materiały do nauki.</h3>
+                    <h3 class="section-tools__header">Narzędzia</h3>
                     <ul class="section-tools__list">
                         <li class="section-tools__item"><a href="http://frontendtools.com/" target="_blank"
-                                rel="noopener noreferrer"
-                                class="section-tools__link"><span>frontendtools</span><span>Narzędzia dla programistów i
+                                rel="noopener noreferrer" class="section-tools__link"><span
+                                    class="section-tools__title">frontendtools</span><span>Narzędzia dla programistów i
                                     projektantów frontendu.</span></a></li>
                         <li class="section-tools__item"><a href="https://caniuse.com/" target="_blank"
-                                rel="noopener noreferrer" class="section-tools__link"><span>Can I use</span><span>Co
+                                rel="noopener noreferrer" class="section-tools__link"><span
+                                    class="section-tools__title">Can I use</span><span>Co
                                     obecnie działa w przeglądarce.</span></a></li>
                         <li class="section-tools__item"><a href="https://gitexplorer.com/" target="_blank"
-                                rel="noopener noreferrer" class="section-tools__link"><span>Git Command
+                                rel="noopener noreferrer" class="section-tools__link"><span
+                                    class="section-tools__title">Git Command
                                     Explorer</span><span>Polecenia Gita.</span></a></li>
                         <li class="section-tools__item"><a href="https://uncss-online.com/" target="_blank"
-                                rel="noopener noreferrer" class="section-tools__link"><span>UnCSS
+                                rel="noopener noreferrer" class="section-tools__link"><span
+                                    class="section-tools__title">UnCSS
                                     Online!</span><span>Pozbądź się nieużywanego CSSa</span></a></li>
                     </ul>
                 </section>
-                <section class="section-tools" id="watch">
-                    <h3 class="section-tools__header">Do obejrzenia.</h3>
-                    <ul class="section-tools__list">
-                        <li class="section-tools__item"><a
+                <section class="section-watch" id="watch">
+                    <h3 class="section-watch__header">Do obejrzenia</h3>
+                    <ul class="section-watch__list">
+                        <li class="section-watch__item"><a
                                 href="https://www.youtube.com/channel/UCq8XmOMtrUCb8FcFHQEd8_g/featured" target="_blank"
-                                rel="noopener noreferrer" class="section-tools__link"><span>hello
+                                rel="noopener noreferrer" class="section-watch__link"><span
+                                    class="section-watch__title">hello
                                     roman</span><span>Filmy poświęcone branży IT, a przede wszystkim przemyślenia na
                                     temat front-endu.</span></a></li>
-                        <li class="section-tools__item"><a
+                        <li class="section-watch__item"><a
                                 href="https://www.youtube.com/channel/UC_MIaHmSkt9JHNZfQ_gUmrg" target="_blank"
-                                rel="noopener noreferrer"
-                                class="section-tools__link"><span>overment</span><span>Najbardziej konkretne filmy dla
+                                rel="noopener noreferrer" class="section-watch__link"><span
+                                    class="section-watch__title">overment</span><span>Najbardziej konkretne filmy dla
                                     webdeveloperów.</span></a></li>
-                        <li class="section-tools__item"><a
+                        <li class="section-watch__item"><a
                                 href="https://www.youtube.com/channel/UCLLdzVN9P9lV8kmJhHsiuHA" target="_blank"
-                                rel="noopener noreferrer"
-                                class="section-tools__link"><span>Kodu.je</span><span>Przydatne tutoriale, niestety brak
+                                rel="noopener noreferrer" class="section-watch__link"><span
+                                    class="section-watch__title">Kodu.je</span><span>Przydatne tutoriale, niestety brak
                                     nowych.</span></a></li>
-                        <li class="section-tools__item"><a href="https://dev.tube/" target="_blank"
-                                rel="noopener noreferrer" class="section-tools__link"><span>dev.tube</span><span>Youtube
+                        <li class="section-watch__item"><a href="https://dev.tube/" target="_blank"
+                                rel="noopener noreferrer" class="section-watch__link"><span
+                                    class="section-watch__title">dev.tube</span><span>Youtube
                                     dla programistów.</span></a></li>
                     </ul>
                 </section>
